--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -101,7 +101,7 @@
 					<div class="mui-pull-left lang" data-locale="det_spdescription"></div>
 				</li>
 				<li class="mui-table-view-cell">
-					<div class="kankan_det_information"></div>
+					<div class="kankan_det_information" style="word-break:break-word;"></div>
 				</li>
 			</ul>
 			<!--share-->
