--- a/kankan/pages/main/products/product_want_to_buy.html
+++ b/kankan/pages/main/products/product_want_to_buy.html
@@ -111,7 +111,8 @@ function publishs() {
 		},
 		ng: function(data) {
 			Log.d(data);
-			if(data == "1000" || data=="2002") {
+			Api.callback_ng(data);
+			/*if(data == "1000" || data=="2002") {
 				mui.toast(TextMessage.test, {
 					duration: 'long',
 					type: 'div'
@@ -141,7 +142,8 @@ function publishs() {
 					id: 'point_to_ticket',
 					url:"../sttting/point_to_ticket.html"
 				});
-			}
+			}*/
+			Api.callback_ng(data);
 			//alert("other error code:" + data);
 			
 		}
