--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -230,23 +230,24 @@
 				});
 			});
 			//*********************share start
-			var shares = {};
-			mui.plusReady(function() {
-				TextMessage.language = plus.os.language;
-				plus.share.getServices(function(s) {
-					if(s && s.length > 0) {
-						for(var i = 0; i < s.length; i++) {
-							var t = s[i];
-							shares[t.id] = t;
-						}
-					}
-				}, function() {
-					console.log("share server fail");
-				});
-			});
+			
 
 			//onclick share
 			function clickshare(shareid,imgurl){
+				var shares = {};
+				mui.plusReady(function() {
+					TextMessage.language = plus.os.language;
+					plus.share.getServices(function(s) {
+						if(s && s.length > 0) {
+							for(var i = 0; i < s.length; i++) {
+								var t = s[i];
+								shares[t.id] = t;
+							}
+						}
+					}, function() {
+						console.log("share server fail");
+					});
+				});
 				document.getElementById("share").addEventListener('tap', function() {
 					var ids = [{
 							id: "weixin",
@@ -603,7 +604,8 @@
 					gotoItem: 0
 				});
 				var imgurl0=imgsarr[0];
-				clickshare(comdityid,imgurl0);
+				var shareidval=$(".kankan_zanbox").attr("id");
+				clickshare(shareidval,imgurl0);
 			}
 			//products list
 			var prolistpage = null;
