--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -817,10 +817,10 @@
 							ok: function(data) {
 								console.log("success");
 								//console.dir(data);
-								mui.toast(TextMessage.updatesuccessinfo, {
-									duration: 'long',
-									type: 'div'
-								});
+//								mui.toast(TextMessage.updatesuccessinfo, {
+//									duration: 'long',
+//									type: 'div'
+//								});
 							},
 							ng: function(data) {
 								Log.d(data);
